# public/swagger.json
@@ -177,10 +177,6 @@
 					},
 					"full_name": {
 						"type": "string"
-					},
-					"group_id": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
@@ -236,10 +232,6 @@
 			},
 			"Pick_IUser.Exclude_keyofIUser.id__": {
 				"properties": {
-					"group_id": {
-						"type": "number",
-						"format": "double"
-					},
 					"email": {
 						"type": "string"
 					},
@@ -288,10 +280,6 @@
 			},
 			"Partial_IUserCreate_": {
 				"properties": {
-					"group_id": {
-						"type": "number",
-						"format": "double"
-					},
 					"email": {
 						"type": "string"
 					},
@@ -775,9 +763,7 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/IUserCreate"
-							}
+							"schema": {}
 						}
 					}
 				}
